# driveshare

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
scripts/: setup-wsl-network.sh  wsl-port-forward.ps1
src/: browser.html  cli.rs  config.rs  daemon.rs  dashboard.html  device_manager.rs  error.rs  lib.rs  main.rs  permissions.rs  server.rs  ui.rs  watcher.rs  webdav.rs
src/daemon/: mod.rs  pid.rs
src/server/: mod.rs  tls.rs
src/templates/: browser.html  dashboard.html
src/ui/: mod.rs
src/webdav/: mod.rs
