[package]
name = "driveshare"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
mime_guess = "2"
url = "2"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
notify = "7"
zip = "0.6"
urlencoding = "2"
directories = "5"
webbrowser = "1.0"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rcgen = "0.12"
dns-lookup = "2"
qrcode = { version = "0.14", features = ["svg"] }
